# casdoor-rs-sdk

./: Cargo.toml  README.md
src/: config.rs  lib.rs  sdk.rs  service.rs  utils.rs
src/application/: mod.rs  models.rs
src/authn/: mod.rs  models.rs  types.rs
src/authn/testdata/: cert_es256.txt  cert_es384.txt  cert_rs512.txt  tok_es256.txt  tok_es384.txt  tok_rs512.txt
src/authz/: mod.rs  models.rs
src/cert/: mod.rs  models.rs
src/enforcer/: mod.rs  models.rs
src/entity/: config.rs  mod.rs  user.rs
src/organization/: mod.rs  models.rs
src/provider/: mod.rs  models.rs
src/sdk/: errors.rs  mod.rs  models.rs
src/service/: auth.rs  mod.rs  user.rs
src/user/: mod.rs  models.rs  types.rs
tests/: auth_test.rs  user_test.rs
