[package]
name = "casdoor-rs-sdk"
version = "2.3.0"
edition = "2021"
license = "Apache-2.0"
description = "A Casdoor SDK (contain APIs) with more complete interfaces and better usability."
repository = "https://github.com/andeya/casdoor-rs-sdk"
documentation = "https://docs.rs/casdoor-rs-sdk"
readme = "README.md"
homepage = "https://casdoor.org"
keywords = ["iam", "auth", "sso", "oidc", "casdoor"]
authors = ["Andeya Lee <andeyalee@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9.3.0"
urlencoding = "2.1"
oauth2 = "4.1"
toml = "0.8"
cubix = ">=0.7.0"
salvo = { version = ">=0.74", default-features = false, features = [
    "oapi",
], optional = true }
casdoor-api = { package = "casdoor-sdk", version = "2.0.4", optional = true }

[features]
default = ["api", "salvo"]
salvo = ["dep:salvo", "cubix/salvo"]
api = ["dep:casdoor-api"]
